# rupiahpulse

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  railway-deploy.sh  railway.json
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.worker  alembic.ini  pyproject.toml  railway.json  railway.worker.json  seed.py  start_worker.sh
backend/app/: main.py
backend/app/api/v1/: endpoints.py
backend/app/core/: config.py  logging.py
backend/app/db/: base.py  session.py
backend/app/jobs/: runner.py  scheduler.py
backend/app/models/: __init__.py  currency.py  explanation.py  macro.py  news.py
backend/app/schemas/: __init__.py  currency.py  explanation.py  health.py  macro.py  news.py
backend/app/services/: data_provider.py  explanation.py  prediction.py  repository.py  scoring.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py
backend/tests/: test_api.py  test_explanation.py  test_repository.py  test_scoring.py
deploy/: nginx.conf  supervisord.conf
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  start.sh  tsconfig.tsbuildinfo
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.tsx  main.tsx
frontend/src/components/charts/: FactorBreakdownChart.tsx  GaugeChart.tsx  TimeRangeSelector.tsx  TimeSeriesChart.tsx
frontend/src/components/layout/: ErrorBoundary.tsx  Layout.tsx  Navbar.tsx  ToggleBar.tsx
frontend/src/hooks/: useApi.ts  useChartTheme.ts
frontend/src/lib/: i18n.tsx  theme.tsx  utils.ts
frontend/src/styles/: globals.css
(+12 files in other folders)
